Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-2581

TFDTransport destructor should not throw

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.9
    • 0.9.2
    • C++ - Library
    • None
    • Patch Available

    Description

      Following the discussion on https://github.com/apache/thrift/pull/142 ~TFDTransport seems to be the only throwing destructor from all transports.
      Throwing from a destructor is considered not safe under certain conditions and should be avoided.

      The c++ standard defines a default noexcept for default destructors as mentioned in: http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2010/n3166.html
      This will cause the current behavior to fail under C++11.

      In my opinion, we should catch this mentioned exception in the destructor and log it. This will require to explicitly call the close() method in order to catch the exception.

      Attachments

        Activity

          People

            henrique Henrique Mendonca
            henrique Henrique Mendonca
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: