THRIFT-2581 C++ TFDTransport destructor should not throw