lib/cpp/src/thrift/transport/TFDTransport.h
@@ -48,7 +48,12 @@ class TFDTransport : public TVirtualTransport<TFDTransport> {
 
   ~TFDTransport() {
     if (close_policy_ == CLOSE_ON_DESTROY) {
-      close();
+      try {
+        close();
+      } catch(TTransportException& ex) {
+        GlobalOutput.printf("~TFDTransport TTransportException: '%s'",
+                            ex.what());
+      }
     }
   }
 
